Student - Footer Icon Color changed

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -266,7 +266,9 @@
       "home" : "Home",
       "wallet" : "Wallet",
       "discover" : "Discover",
-      "possell" : "POS Sell"
+      "possell" : "POS Sell",
+      "mycourses" : "My Courses",
+      "notifications" : "Notifications"
     }
   }
 }
