Student - Sidebar warning fixed

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -261,6 +261,8 @@
       "notifications" : "أشعارات",
       "mycourses" : "اشتراكاتي",
       "allteachers" : "جميع مدرسين",
+      "mail"  : "رسالة",
+      "myprofile": "ملفي",
       "logout" : "جميع مدرسين"
     },
     "footer" : {
