Student - Reset Password added on Profile

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -263,7 +263,7 @@
       "allteachers" : "جميع مدرسين",
       "mail"  : "رسالة",
       "myprofile": "ملفي",
-      "logout" : "جميع مدرسين"
+      "logout" : "تسجيل خروج"
     },
     "footer" : {
       "home" : "الرئيسية",
